--- a/ISE Project.ipynb
+++ b/ISE Project.ipynb
@@ -302,7 +302,7 @@
     "# 4) Player cannot exceed 508 energy at any moment\n",
     "#    Even if they spa at the start of the day\n",
     "m.addConstr(\n",
-    "   START_ENER + 430 * gp.quicksum(s[j] for j in range(DAY_LENGTH)) - 7 * 7 * gp.quicksum(f[i] for i in range(N_FISH)) <= 508,\n",
+    "   START_ENER + 430 * gp.quicksum(s[j] for j in range(DAY_LENGTH)) - 7 * gp.quicksum(f[i] for i in range(N_FISH)) <= 508,\n",
     "   name=\"energy_cap\"\n",
     ")\n",
     "\n",
