--- a/ISE Project.ipynb
+++ b/ISE Project.ipynb
@@ -264,7 +264,6 @@
     "# Total in-game day length (hours)\n",
     "# 6am–2am in-game\n",
     "DAY_LENGTH = 20  \n",
-    "HOURS_IN_DAY = [6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 0, 1]\n",
     "\n",
     "# Decision variables\n",
     "f = m.addVars(N_FISH, vtype=GRB.INTEGER, lb=0, name=\"f\") # number of each fish caught\n",
@@ -278,7 +277,7 @@
     ")\n",
     "\n",
     "# --- CONSTRAINTS ---\n",
-    "# 1) Total time (fishing + spa ≤ 20 hours)\n",
+    "# 1) Total time (fishing + spa <= 20 hours)\n",
     "m.addConstr(\n",
     "    gp.quicksum(s[i] for i in range(DAY_LENGTH)) + gp.quicksum(difficulties[i] * f[i] for i in range(N_FISH)) <= DAY_LENGTH,\n",
     "    name=\"total_time\"\n",
