--- a/ISE Project.ipynb
+++ b/ISE Project.ipynb
@@ -292,7 +292,7 @@
     "               )\n",
     "\n",
     "# 3) Energy balance (player starts with START_ENER energy)\n",
-    "#    Costs 7 per fish, 430 energy per hour t spent in spa\n",
+    "#    Costs 7 per fish, 430 energy per hour s spent in spa\n",
     "m.addConstr(\n",
     "    7 * gp.quicksum(f[i] for i in range(N_FISH)) <= START_ENER + 430 * gp.quicksum(s[j] for j in range(DAY_LENGTH)),\n",
     "    name=\"energy_used\"\n",
